adding label for guage series
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39879

--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/SwitchDashboard/SwitchDashboard.html
@@ -48,7 +48,7 @@
                                 <vr-datagridcolumn headertext="'Attempts'" field="'Attempts'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Connected'" field="'CountConnected'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
 
-                                <vr-datagridcolumn headertext="'ASR'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'ASR %'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'" getcolor="scopeModel.getACDColor"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Total Dur (M)'" field="'TotalDuration'" type="'Number'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'PDD (S)'" field="'PDDInSec'" type="'Number'" getcolor="scopeModel.getPDDColor"></vr-datagridcolumn>
@@ -83,7 +83,7 @@
                                 <vr-datagridcolumn headertext="'Supplier Name'" field="'SupplierName'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Attempts'" field="'Attempts'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Connected'" field="'CountConnected'" initiallyhidden="true" type="'Number'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'ASR'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'ASR %'" field="'PercConnected'" type="'Number'" numberprecision="'NoDecimal'" getcolor="scopeModel.getPercConnectedColor"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'ACD'" field="'ACD'" type="'Number'" getcolor="scopeModel.getACDColor"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'Total Dur (M)'" field="'TotalDuration'" type="'Number'"></vr-datagridcolumn>
                                 <vr-datagridcolumn headertext="'PDD (S)'" field="'PDDInSec'" type="'Number'" getcolor="scopeModel.getPDDColor"></vr-datagridcolumn>
