--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditGridTemplate.html
@@ -5,12 +5,13 @@
              menuactions="gridMenuActions"
              idfield="Entity.VRActionAuditId" defaultsortdirection="'DESC'" defaultsortbyfieldname="'Entity.LogTime'">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.VRActionAuditId'" type="'Text'" widthfactor="1"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Time'" field="'Entity.LogTime'" type="'LongDatetime'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'User'" field="'UserName'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Url'" field="'URLName'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Module'" field="'ModuleName'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Entity'" field="'EntityName'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Action'" field="'ActionName'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Object Id'" field="'Entity.ObjectId'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Object Name'" field="'Entity.ObjectName'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Time'" field="'Entity.LogTime'" type="'LongDatetime'" fixedwidth="120"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'User'" field="'UserName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Url'" field="'URLName'" type="'Text'" fixedwidth="150" initiallyhidden="true"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Module'" field="'ModuleName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Entity'" field="'EntityName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Action'" field="'ActionName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Object Id'" field="'Entity.ObjectId'" type="'Text'" fixedwidth="70" initiallyhidden="true"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Object Name'" field="'Entity.ObjectName'" type="'Text'" widthfactor="1"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Notes'" field="'Entity.ActionDescription'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
 </vr-datagrid>
