--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/BillingCycle/MainExtensions/BillingPeriod/Templates/MonthlyBillingPeriodTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/BillingCycle/MainExtensions/BillingPeriod/Templates/MonthlyBillingPeriodTemplate.html
@@ -8,12 +8,14 @@
                    hideremoveicon="true">
         </vr-select>
     </vr-columns>
-    <vr-columns width="1/3row" ng-if="ctrl.selectedMonthlyType.value == 0">
-        <vr-textbox value="ctrl.specificDay" type="number" decimalprecision="0" minvalue="1" maxvalue="28" label="Specific Day" isrequired></vr-textbox>
-    </vr-columns>
-    <vr-columns width="1/3row" withemptyline>
-        <vr-button type="Add" data-onclick="ctrl.addMonthlyPeriod" standalone></vr-button>
-    </vr-columns>
+    <vr-validation-group validationcontext="validationContext">
+        <vr-columns width="1/3row" ng-if="ctrl.selectedMonthlyType.value == 0">
+            <vr-textbox value="ctrl.specificDay" type="number" decimalprecision="0" minvalue="1" maxvalue="28" label="Specific Day" isrequired></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/3row" withemptyline>
+            <vr-button type="Add" vr-disabled="validationContext.validate() != null" data-onclick="ctrl.addMonthlyPeriod" standalone></vr-button>
+        </vr-columns>
+    </vr-validation-group>
 </vr-row>
 <vr-row>
     <vr-columns width="fullrow">
