--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
@@ -6,9 +6,9 @@
 
                 <vr-columns width="normal">
                     <vr-datetimepicker type="date" label="From" value="fromDate" isrequired="true"></vr-datetimepicker>
-                </vr-columns>
+                </vr-columns> 
                 <vr-columns width="normal">
-                    <vr-datetimepicker type="date" label="To" value="toDate"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" applytimemax label="To" value="toDate"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns width="normal">
                     <vr-datetimepicker type="date" label="Issue Date" value="issueDate"></vr-datetimepicker>
