--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleSettingsTemplate.html
@@ -1,10 +1,10 @@
 ﻿<vr-tab header="'Criteria'">
     <vr-row>
         <vr-columns width="fullrow">
-            <vr-analytic-daprofcalc-alertrulecriteria on-ready="scopeModel.onCriteriaDirectiveReady"></vr-analytic-daprofcalc-alertrulecriteria>
+            <vr-analytic-daprofcalc-alertrulecriteria on-ready="scopeModel.onCriteriaDirectiveReady" on-criteria-selection-changed="scopeModel.onCriteriaSelectionChanged"></vr-analytic-daprofcalc-alertrulecriteria>
         </vr-columns>
     </vr-row>
 </vr-tab>
-<vr-tab header="'Actions'">
-    <vr-notification-vraction-management on-ready="scopeModel.onVRActionManagementDirectiveReady"></vr-notification-vraction-management>
+<vr-tab header="'Actions'" ng-if="scopeModel.selectedAnalysisTypeId!=undefined">
+    <vr-notification-vraction-management on-ready="scopeModel.onVRActionManagementDirectiveReady" vr-loader="scopeModel.isActionLoading"></vr-notification-vraction-management>
 </vr-tab>
