--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/DataRecord/VRActionRuntime/Templates/SendEmail.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/DataRecord/VRActionRuntime/Templates/SendEmail.html
@@ -1,8 +1,6 @@
-﻿
-
-<vr-row>
+﻿<vr-row>
     <vr-columns width="1/2row">
-        <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onMailMessageTemplateSelectorReady"
+        <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onMailMessageTemplateSelectorReady" isrequired="true"
                                                 customlabel="Mail Message Template"></vr-common-mailmessagetemplate-selector>
     </vr-columns>
 </vr-row>
