--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/SaleRateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleRate/Templates/SaleRateGridTemplate.html
@@ -5,7 +5,7 @@
                  pagingtype="'PagingOnScroll'"
                  menuactions="gridMenuActions"
                  idfield="Entity.SaleRateId"
-                 showexpand="isExpandable" enableautoexport="true">
+                 enableautoexport="true">
         <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Rate'" field="'ConvertedRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="5"></vr-datagridcolumn>
         <vr-datagridcolumn fixedwidth="'35'">
