--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BusinessEntityDefinition/MainExtensions/GenericBusinessEntity/Runtime/Management/Grid/Templates/GenericBusinessEntityGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BusinessEntityDefinition/MainExtensions/GenericBusinessEntity/Runtime/Management/Grid/Templates/GenericBusinessEntityGridTemplate.html
@@ -4,7 +4,7 @@
              menuactions="ctrl.menuActions"
              pagingtype="'PagingOnScroll'"
              idfield="Entity.GenericBusinessEntityId"
-             defaultsortbyfieldname="'Entity.GenericBusinessEntityId'">
+             defaultsortbyfieldname="'Entity.GenericBusinessEntityId'" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.GenericBusinessEntityId'"></vr-datagridcolumn>
     <vr-datagridcolumn ng-repeat="column in ctrl.columns" headertext="column.FieldTitle" field="'FieldValueDescriptions[' + $index + ']'" tag="column" isfielddynamic="true" disablesorting>
         <span ng-init="result = viewScope.isValueBool(colDef,dataItem)">
