export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39918

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SwitchConnectivity/Templates/SwitchConnectivityGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SwitchConnectivity/Templates/SwitchConnectivityGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              menuactions="scopeModel.menuActions"
              pagingtype="'PagingOnScroll'"
-             idfield="Entity.SwitchConnectivityId">
+             idfield="Entity.SwitchConnectivityId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Carrier Account Name'" field="'CarrierAccountName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Switch Name'" field="'SwitchName'" type="'Text'"></vr-datagridcolumn>
