--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Views/FinancialAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Views/FinancialAccountEditor.html
@@ -13,10 +13,10 @@
                 <vr-tab header="'Time Settings'">
                     <vr-row removeline>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="date" label="Begin Effective Date" isrequired></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="date" label="BED" isrequired></vr-datetimepicker>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="date" label="End Effective Date"></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="date" label="EED"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
