--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleCode/Templates/SaleCodeGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SaleCode/Templates/SaleCodeGridTemplate.html
@@ -9,7 +9,7 @@
         <vr-datagridcolumn headertext="'ID'" field="'Entity.SaleCodeId'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'" ng-show="!hidesalezonecolumn"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Code'" field="'Entity.Code'" type="'Text'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Begin Effective Date'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'End Effective Date'" field="'Entity.EED'" type="'Date'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'"></vr-datagridcolumn>
     </vr-datagrid>
 </div>
