--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchConnectivity/SwitchConnectivityEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchConnectivity/SwitchConnectivityEditor.html
@@ -53,10 +53,10 @@
                 <vr-tab header="'Scheduler'">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker label="Begin Effective Date" type="dateTime" value="scopeModel.beginEffectiveDate" isrequired="true"></vr-datetimepicker>
+                            <vr-datetimepicker label="BED" type="dateTime" value="scopeModel.beginEffectiveDate" isrequired="true"></vr-datetimepicker>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker label="End Effective Date" type="dateTime" value="scopeModel.endEffectiveDate"></vr-datetimepicker>
+                            <vr-datetimepicker label="EED" type="dateTime" value="scopeModel.endEffectiveDate"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
