--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RouteOptionRule/RouteOptionRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RouteOptionRule/RouteOptionRuleEditor.html
@@ -106,10 +106,10 @@
                 <vr-tab header="'Time Settings'">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="longDateTime" label="Begin Effective Date" isrequired></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="longDateTime" label="BED" isrequired></vr-datetimepicker>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="longDateTime" label="End Effective Date"></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="longDateTime" label="EED"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
