integrate drilldown in generic rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39930

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleGridTemplate.html
@@ -10,4 +10,7 @@
     <vr-datagridcolumn headertext="'Settings'" type="'Text'" field="'SettingsDescription'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" type="'LongDatetime'" field="'Entity.BeginEffectiveTime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" type="'LongDatetime'" field="'Entity.EndEffectiveTime'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+    <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+</vr-datagridexpandablerow>
 </vr-datagrid>  
