--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BEParentChildRelation/BEParentChildRelationDefinition/Templates/BEParentChildRelationDefinitionSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BEParentChildRelation/BEParentChildRelationDefinition/Templates/BEParentChildRelationDefinitionSettingsTemplate.html
@@ -24,4 +24,20 @@
             </vr-columns>
         </vr-row>
     </vr-tab>
+    <vr-tab header="'Security'">
+        <vr-row>
+            <vr-columns width="fullrow">
+                <vr-section header="View">
+                    <vr-sec-requiredpermission-grid on-ready="scopeModel.onViewRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                </vr-section>
+            </vr-columns>
+        </vr-row>
+        <vr-row>
+            <vr-columns width="fullrow">
+                <vr-section header="Add">
+                    <vr-sec-requiredpermission-grid on-ready="scopeModel.onAddRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                </vr-section>
+            </vr-columns>
+        </vr-row>
+    </vr-tab>
 </vr-tabs>
