Refactored the UI of the Zone Info section; Removed unnecessary folder
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39937

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/ZoneInfo.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/ZoneInfo.html
@@ -6,12 +6,12 @@
                     <vr-section header="{{scopeModel.sectionHeader}}">
                         <vr-row>
                             <vr-columns width="1/2row">
-                                <vr-label><span style="font-size: 12px;">BED:</span></vr-label>
-                                <vr-label isvalue="true"><span style="font-size: 12px;">{{scopeModel.zoneBED}}</span></vr-label>
+                                <vr-label mediumsize>BED:</vr-label>
+                                <vr-label isvalue="true" mediumsize>{{scopeModel.zoneBED}}</vr-label>
                             </vr-columns>
                             <vr-columns width="1/2row" ng-show="scopeModel.zoneEED != undefined">
-                                <vr-label><span style="font-size: 12px;">EED:</span></vr-label>
-                                <vr-label isvalue="true"><span style="font-size: 12px;">{{scopeModel.zoneEED}}</span></vr-label>
+                                <vr-label mediumsize>EED:</vr-label>
+                                <vr-label isvalue="true" mediumsize>{{scopeModel.zoneEED}}</vr-label>
                             </vr-columns>
                         </vr-row>
                     </vr-section>
