--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountViews/MainExtensions/Templates/ChildBERelationsViewTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountViews/MainExtensions/Templates/ChildBERelationsViewTemplate.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <vr-row removeline>
         <vr-columns width="fullrow" simplecol>
-            <vr-button type="Add" data-onclick="scopeModel.onChildBERelationAdded" standalone></vr-button>
+            <vr-button type="Add" data-onclick="scopeModel.onChildBERelationAdded" standalone ng-show="scopeModel.hasAddPermission"></vr-button>
         </vr-columns>
     </vr-row>
     <vr-row vr-loader="scopeModel.isGridLoading">
