--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
@@ -7,9 +7,18 @@
         </vr-analytic-dataanalysisitemdefinition-selector>
     </vr-columns>
 </vr-row>
-<vr-row vr-loader="scopeModel.isRecordFilterDirectiveLoading" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
+
+<vr-row vr-loader="scopeModel.isDataAnalysisRecordFilterDirectiveLoading">
     <vr-columns width="fullrow">
-        <vr-validator validate="scopeModel.validateRecordFilter()">
+        <vr-section title="Data Analysis Filter" collapsible>
+            <vr-genericdata-recordfilter on-ready="scopeModel.onDataAnalaysisRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
+        </vr-section>
+    </vr-columns>
+</vr-row>
+
+<vr-row vr-loader="scopeModel.isRecordFilterDirectiveLoading" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
+    <vr-columns width="fullrow" >
+        <vr-validator default validate="scopeModel.validateRecordFilter()">
             <vr-section title="Record Filter" collapsible>
                 <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
             </vr-section>
